--- a/blue-1.css
+++ b/blue-1.css
@@ -1,5 +1,5 @@
 	    	body{
-          background-color: black;
+       background-image: linear-gradient(to right bottom, #000000, #140a11, #1b1320, #191c32, #012743);
                   }
     	  .blue-a{
           color: aqua;
